refresh 수정